# aws-serverless-architecture-pub

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/magic_api/: __init__.py  app.py  auth.py  cognito_admin.py  config.py  errors.py  models.py  repositories.py  routes_admin.py  routes_common.py  routes_student.py  routes_teacher.py  s3_signing.py
backend/tests/: conftest.py  test_admin_routes.py  test_authz.py  test_aws_adapters.py  test_deployment_artifacts.py  test_device_binding.py  test_live_integration_closure.py  test_student_weeks.py  test_teacher_routes.py
docs/: cloud-maintenance.md  deployment.md  release-checklist.md  teacher-guide.md  teacher-workflow.drawio
docs/architecture/: aws -architecture.drawio  magic-clean-icon-flow-architecture.drawio-url.txt
frontend/: admin.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/public/magic-pages/: calculmagic.html  eyestest.html  讀心術.html
frontend/src/: admin.ts  api.ts  auth.ts  config.ts  device.ts  loading.ts  main.ts  modal.ts  pwa.ts  styles.css  types.ts
infra/: .terraform.lock.hcl  acm.tf  alarms.tf  api_gateway.tf  architecture-review.md  budgets.tf  cloudfront.tf  cognito.tf  dynamodb.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  s3.tf  terraform-intake.md  terraform.tfvars.example  variables.tf  versions.tf
scripts/: deploy-static.sh  fetch-magic-pages.sh  package-lambda.sh  smoke-test.sh
