[project]
name = "magic-api"
version = "0.1.0"
description = "Magic serverless MVP Lambda API"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
